add launcher activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,12 @@
 
         <activity
             android:name=".ProblemsMap"
-            android:label="@string/title_activity_problems_map" />
+            android:label="@string/title_activity_problems_map">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ReportMap"
             android:label="@string/title_activity_report_map"></activity>
