--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,17 +26,19 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation "com.google.android.gms:play-services-location:15.0.1"
+    implementation "com.google.android.gms:play-services-location:16.0.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.3+'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.amazonaws:aws-android-sdk-core:2.7.0'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.7.5'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.7.0'
     implementation 'com.amazonaws:aws-android-sdk-ddb:2.7.0'
     implementation 'com.amazonaws:aws-android-sdk-lambda:2.7.0'
     implementation 'com.amazonaws:aws-android-sdk-apigateway-core:2.7.0'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.7.0'
     implementation ('com.amazonaws:aws-android-sdk-auth-userpools:2.7.0@aar') { transitive = true }
+    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.7.+@aar') { transitive = true }
 }
