--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.7.0'
     implementation('com.amazonaws:aws-android-sdk-auth-userpools:2.7.0@aar') { transitive = true }
     implementation('com.amazonaws:aws-android-sdk-mobile-client:2.7.+@aar') { transitive = true }
+    implementation 'id.zelory:compressor:2.1.0'
 }
